# non-coding-scores

./: .gitignore  composite_scores.tsv  composite_scores_20250909_110451.feather  correlation_comparison.py  extract_scores.py  generate_reconstruction_scores.py  main.py  main_1.py  main_10.py  main_25.py  pixi.toml  pyproject.toml  requirements.txt  test_code_score.py  testing_detail.py  training.py  training_2.py  utils.py
autoencoders/: base_ae.py  binary_mask_dae.py  denoising_ae.py  m_base.py  orthogonal_ae.py  wassertein_ae.py  weighted_ae.py
old_results/: correlation_comparison.py  data_augmentation.py  testing.py  training_2.py
