[project]
name = "non-coding-scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fireducks>=1.4.1",
    "lightning[extra]>=2.5.5",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torchvision>=0.23.0",
]
